css-file has been changed

--- a/styles.css
+++ b/styles.css
@@ -157,7 +157,7 @@ body {
     width: 300px;
     height: 400px;
     /* margin: расстояние между элементами
-    paddong: */
+    padding: */
 }
 
 .block {
