css-file has been changed

--- a/styles.css
+++ b/styles.css
@@ -22,12 +22,12 @@
     p, h1, .main-text - стили применяются ко всем селекторам через запятую.
 
     Контекстные селекторы:
-    div a - стили применяются только к ссылкам внутри тега div.
+    div a --> стили применяются только к ссылкам внутри тега div.
 
     Важность селекторов:
     - !important (перезаписывается другим !important);
     - inline - встроенные стили в аттрибуте style (которые написали прямо в теге);
-    - #id (нельзя дублировать!)ж
+    - #id (нельзя дублировать!);
     - .class или [attr];
     - tag
 
