changes have been made in css-file

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 /* Css
 
-    1. Internal - Глобальные
+    1. Internal - Внутренние/Глобальные
     2. External - Внешние/Связанные
     3. Inline - Встроенные
 
@@ -29,7 +29,8 @@
     - inline - встроенные стили в аттрибуте style (которые написали прямо в теге);
     - #id (нельзя дублировать!);
     - .class или [attr];
-    - tag
+    - tag;
+    - *
 
     Равноправные селекторы перезаписываются по мере написания.
 
